--- a/index.html
+++ b/index.html
@@ -254,6 +254,23 @@
                                 <input type="date" name="expected_delivery">
                             </div>
                         </div>
+                        <div class="form-row">
+                            <div class="form-group">
+                                <label>Status *</label>
+                                <select name="status" required>
+                                    <option value="PENDING">Pending</option>
+                                    <option value="APPROVED">Approved</option>
+                                    <option value="SENT">Sent</option>
+                                    <option value="PARTIAL_RECEIVED">Partial Received</option>
+                                    <option value="RECEIVED">Received</option>
+                                    <option value="CANCELLED">Cancelled</option>
+                                </select>
+                            </div>
+                            <div class="form-group">
+                                <label>Total Amount</label>
+                                <input type="number" name="total_amount" step="0.01" value="0">
+                            </div>
+                        </div>
                         <div class="form-group">
                             <label>Notes</label>
                             <textarea name="notes" rows="2"></textarea>
