--- a/index.html
+++ b/index.html
@@ -513,11 +513,11 @@
                 <!-- Content will be inserted here -->
             </div>
             <div class="modal-footer">
-                <button class="btn btn-secondary" onclick="closeInfoDialog()">Close</button>
+                <button class="btn btn-primary" onclick="closeInfoDialog()">Close</button>
             </div>
         </div>
     </div>
 
-    <script src="js/app.js?v=7"></script>
+    <script src="js/app.js?v=8"></script>
 </body>
 </html>
