--- a/index.html
+++ b/index.html
@@ -500,6 +500,9 @@
         <button id="sql-dialog-toggle" class="sql-dialog-toggle" onclick="toggleSQLDialog()">
             <i class="fas fa-database"></i> SQL Monitor
         </button>
+
+        <!-- Toast Notification Container -->
+        <div id="toast-container" class="toast-container"></div>
     </div>
 
     <!-- Info Modal -->
@@ -518,6 +521,6 @@
         </div>
     </div>
 
-    <script src="js/app.js?v=8"></script>
+    <script src="js/app.js?v=9"></script>
 </body>
 </html>
