--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
                         <i class="fas fa-trash"></i>
                     </button>
                     <button class="btn-icon" onclick="toggleSQLDialog()" title="Minimize">
-                        <i class="fas fa-minus"></i>
+                        <i class="fas fa-search"></i>
                     </button>
                 </div>
             </div>
@@ -521,6 +521,6 @@
         </div>
     </div>
 
-    <script src="js/app.js?v=10"></script>
+    <script src="js/app.js?v=11"></script>
 </body>
 </html>
