--- a/index.html
+++ b/index.html
@@ -497,9 +497,9 @@
             </div>
         </div>
 
-        <button id="sql-dialog-toggle" class="sql-dialog-toggle" onclick="toggleSQLDialog()">
+        <!-- <button id="sql-dialog-toggle" class="sql-dialog-toggle" onclick="toggleSQLDialog()">
             <i class="fas fa-database"></i> SQL Monitor
-        </button>
+        </button> -->
 
         <!-- Toast Notification Container -->
         <div id="toast-container" class="toast-container"></div>
